--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -1,31 +1,9 @@
-#container {
-  text-align: center;
-
-  position: absolute;
-  left: 0;
-  right: 0;
-  top: 50%;
-  transform: translateY(-50%);
+.container-icon-coink {
+  padding-top: 30%;
 }
 
-#container strong {
-  font-size: 20px;
-  line-height: 26px;
-}
-
-#container p {
-  font-size: 16px;
-  line-height: 22px;
-
-  color: #8c8c8c;
-
-  margin: 0;
-}
-
-#container a {
-  text-decoration: none;
-}
-
-ion-content ion-toolbar {
-  --background: translucent;
+.text-hero{
+  font-weight: bold;
+  font-size: 18px;
+  margin-top: 5vh;
 }
